# rdxd

./: .gitignore  CMakeLists.txt  README.md  astyle_options  oss-pkg-info.yaml
doc/: Doxyfile.in
files/conf/: rdxd.conf.in
files/launch/: rdxd.conf.in  rdxd.in  rm_varlogtmp.in
files/pkgconfig/: rdx.pc.in
files/scripts/private/: cleanseen.sh.in  collect_alllogs.sh.in  dumplog.sh.in  filter.sh.in  logging.sh.in  make_integcheck.sh.in  make_overview.sh.in  make_sysinfo.sh.in  show_rdx_reports.in
files/scripts/private/starfish/: make_sysinfo.sh.in
files/sysbus/: com.webos.rdxd.api.json  com.webos.rdxd.groups.json  com.webos.rdxd.perm.json  com.webos.rdxd.role.json.in  com.webos.rdxd.service.in
include/internal/: config.h  contextlogs.h  globals.h  librdxlog.h  log.h  logging.h  util.h  watch.h
include/public/: rdx.h
src/: CMakeLists.txt
src/librdx/: CMakeLists.txt  librdxlog.c  rdx.c
src/rdx_reporter/: CMakeLists.txt  main.c
src/rdxd/: CMakeLists.txt  config.cpp  contextlogs.c  log.c  logging.c  main.cpp  util.c  watch.c
